// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateTable should render 1`] = `
<DocumentFragment>
  <div
    data-testid="DelegateTable"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select a Delegate
    </h2>
    <div
      class="sc-AxhCb tChBQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegate Name
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Votes
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Comm.
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Payout
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Min.
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Commission (Daily)
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Vote
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dotted border-theme-neutral-300 false"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AXzxJ8Ts3dQ2bvBR1tPE7GUee9iSEJb8HX"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                    title="AXzxJ8Ts3dQ2bvBR1tPE7GUee9iSEJb8HX"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold"
            >
              arkx
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              #
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              %
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  data-testid="DelegateListItem__toggle-0"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300 false"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="AHJJ29sCdR5UNZjdz3BYeDpvvkZCGBjde9"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"40\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="AHJJ29sCdR5UNZjdz3BYeDpvvkZCGBjde9"
                  />
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold"
            >
              genesis_42
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              #2
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              %
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <div
                  class="sc-AxiKw dzBdqj text-xl text-theme-primary"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  data-testid="DelegateListItem__toggle-1"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateTable should render with empty list 1`] = `
<DocumentFragment>
  <div
    data-testid="DelegateTable"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select a Delegate
    </h2>
    <div
      class="sc-AxhCb tChBQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegate Name
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Votes
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Comm.
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Payout
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Min.
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Commission (Daily)
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Vote
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxiKw GMmVY"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted border-theme-neutral-300"
            data-testid="DelegateRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxirZ hQTESw bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 30%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 60%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
